add server tasks and run script/command

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -19,6 +19,7 @@ MONGODB_USER=mongouser
 MONGODB_PASSWORD=mongopass
 
 # database settings
+POSTGRES_DB=tacticalrmm
 POSTGRES_USER=postgres
 POSTGRES_PASS=postgrespass
 
