--- a/api/tacticalrmm/requirements.txt
+++ b/api/tacticalrmm/requirements.txt
@@ -1,18 +1,19 @@
-adrf==0.1.5
-asgiref==3.7.2
-celery==5.3.6
+adrf==0.1.6
+asgiref==3.8.1
+celery==5.4.0
 certifi==2024.2.2
 cffi==1.16.0
-channels==4.0.0
+channels==4.1.0
 channels_redis==4.2.0
 cryptography==42.0.5
 Django==4.2.11
 django-cors-headers==4.3.1
 django-filter==24.2
 django-rest-knox==4.2.0
-djangorestframework==3.14.0
-drf-spectacular==0.27.1
+djangorestframework==3.15.1
+drf-spectacular==0.27.2
 hiredis==2.3.2
+kombu==5.3.7
 meshctrl==0.1.15
 msgpack==1.0.8
 nats-py==2.7.2
@@ -28,19 +29,19 @@ qrcode==7.4.2
 redis==5.0.3
 requests==2.31.0
 six==1.16.0
-sqlparse==0.4.4
+sqlparse==0.5.0
 twilio==8.13.0
 urllib3==2.2.1
 uvicorn[standard]==0.29.0
-uWSGI==2.0.24
+uWSGI==2.0.25.1
 validators==0.24.0
 vine==5.1.0
 websockets==12.0
 zipp==3.18.1
-pandas==2.2.1
+pandas==2.2.2
 kaleido==0.2.1
 jinja2==3.1.3
 markdown==3.6
-plotly==5.20.0
+plotly==5.21.0
 weasyprint==61.2
 ocxsect==0.1.5
