--- a/docker/.env.example
+++ b/docker/.env.example
@@ -25,8 +25,8 @@ MESH_PERSISTENT_CONFIG=0
 POSTGRES_USER=postgres
 POSTGRES_PASS=postgrespass
 
-# enable/disable web terminal
+# disable web terminal
 TRMM_DISABLE_WEB_TERMINAL=False
 
-# enable/disable server side scripts
+# disable server side scripts
 TRMM_DISABLE_SERVER_SCRIPTS=False
