--- a/api/tacticalrmm/requirements.txt
+++ b/api/tacticalrmm/requirements.txt
@@ -7,6 +7,7 @@ channels_redis==4.2.0
 cryptography==43.0.3
 Django==4.2.16
 django-cors-headers==4.5.0
+django-allauth[socialaccount]==64.2.1
 django-filter==24.3
 django-rest-knox==4.2.0
 djangorestframework==3.15.2
