add setting override to disable sso

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -5,7 +5,7 @@ VERSION=latest
 TRMM_USER=tactical
 TRMM_PASS=tactical
 
-# optional web port override settings 
+# optional web port override settings
 TRMM_HTTP_PORT=80
 TRMM_HTTPS_PORT=443
 
@@ -30,3 +30,6 @@ TRMM_DISABLE_WEB_TERMINAL=False
 
 # disable server side scripts
 TRMM_DISABLE_SERVER_SCRIPTS=False
+
+# disable sso
+TRMM_DISABLE_SSO=False
