--- a/docker/containers/tactical/dockerfile
+++ b/docker/containers/tactical/dockerfile
@@ -16,7 +16,7 @@ COPY api/tacticalrmm/requirements.txt ${TACTICAL_TMP_DIR}/api/requirements.txt
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends gcc libc6-dev && \
-    pip install --upgrade pip && \
+    pip install pip==25.1 && \
     pip install --no-cache-dir setuptools wheel && \
     pip install --no-cache-dir -r ${TACTICAL_TMP_DIR}/api/requirements.txt
 
